scrollbar fix

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -12,14 +12,15 @@ figure.highlight {
   font-size: $type-size-6;
   line-height: 1.8;
   border-radius: $border-radius;
-  ::-webkit-scrollbar { width: 8px; height: 3px;}
-  ::-webkit-scrollbar-track {  background-color: #000;}
-  ::-webkit-scrollbar-track-piece { background-color: #111;}
+  -webkit-scrollbar { width: 8px; height: 3px;}
+  -webkit-scrollbar-track {  background-color: #000;}
+  -webkit-scrollbar-track-piece { background-color: #111;}
   > pre,
   pre.highlight {
     margin: 0;
     padding: 1em;
   }
+
 }
 
 .highlight table {
